Added phone data and comm data display abilities
- Phone data tested and working
- Comm data needs testing

--- a/EthernetLinkConfig/EthernetLinkConfig.csproj
+++ b/EthernetLinkConfig/EthernetLinkConfig.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\CallRecord.cs" />
     <Compile Include="Classes\Common.cs" />
     <Compile Include="Classes\UdpRecieverClass.cs" />
     <Compile Include="Forms\FrmMain.cs">
